<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="pantalla">0.0</string>
    <string name="divide">/</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplica">*</string>
    <string name="igual">=</string>
    <string name="coma">,</string>
    <string name="op1">1</string>
    <string name="op2">2</string>
    <string name="op3">3</string>
    <string name="op4">4</string>
    <string name="op5">5</string>
    <string name="op6">6</string>
    <string name="op7">7</string>
    <string name="op8">8</string>
    <string name="op9">9</string>
    <string name="op0">0</string>
    <string name="borrar">AC</string>
</resources>
